--- a/src/assets/styles/css/particles/google-map.css
+++ b/src/assets/styles/css/particles/google-map.css
@@ -3,7 +3,7 @@
   width: 400px;
   border: none;
   border-radius: 5px;
-  box-shadow: -3px -3px 7px #e4e3e363, 3px 3px 7px #a8aeb49c;
+  box-shadow: -3px -3px 7px rgba(228, 227, 227, 0.3882352941), 3px 3px 7px rgba(168, 174, 180, 0.6117647059);
 }
 
 /*# sourceMappingURL=google-map.css.map */
