--- a/src/assets/styles/css/particles/footer.css
+++ b/src/assets/styles/css/particles/footer.css
@@ -1,6 +1,6 @@
 .main-footer {
   margin-top: 50px;
-  border-top: 1px solid #cccccc59;
+  border-top: 1px solid rgba(204, 204, 204, 0.3490196078);
   padding: 40px 100px;
   display: flex;
   flex-direction: row;
