--- a/src/assets/styles/css/pages/blogs/components/blog-item.css
+++ b/src/assets/styles/css/pages/blogs/components/blog-item.css
@@ -34,4 +34,17 @@
   font-size: 1em;
 }
 
+@media (max-width: 600px) {
+  .blog img {
+    height: auto;
+    max-width: 300px;
+  }
+  .blog .date {
+    font-size: 1em;
+  }
+  .blog h4 {
+    font-size: 1.1em;
+  }
+}
+
 /*# sourceMappingURL=blog-item.css.map */
