--- a/src/assets/styles/scss/pages/blogs/components/blog-item.scss
+++ b/src/assets/styles/scss/pages/blogs/components/blog-item.scss
@@ -38,3 +38,22 @@
     font-size: 1em;
   }
 }
+
+
+
+@media (max-width: 600px) {
+  .blog {   
+    img {
+      height: auto;
+      max-width: 300px;
+    }
+  
+    .date {
+      font-size: 1em;
+    }
+  
+    h4 {
+      font-size: 1.1em;
+    }
+  }
+}
