feat (feedback & notFound & blogs): mobile     @include flex-column;

--- a/src/assets/styles/css/pages/contact-us.css
+++ b/src/assets/styles/css/pages/contact-us.css
@@ -54,4 +54,11 @@
   opacity: 0.8;
 }
 
+@media (max-width: 500px) {
+  .contact-us-page .contact-us-form {
+    min-width: auto;
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=contact-us.css.map */
