--- a/src/assets/styles/css/particles/feedback.css
+++ b/src/assets/styles/css/particles/feedback.css
@@ -34,4 +34,14 @@
   opacity: 0.8;
 }
 
+@media (max-width: 450px) {
+  .feedback-block {
+    margin-top: 40px;
+    gap: 10px;
+  }
+  .feedback-block img {
+    max-width: 80px;
+  }
+}
+
 /*# sourceMappingURL=feedback.css.map */
