--- a/src/assets/styles/scss/pages/contact-us.scss
+++ b/src/assets/styles/scss/pages/contact-us.scss
@@ -63,3 +63,15 @@
     }
   }
 }
+
+
+
+@media (max-width: 500px) {
+
+  .contact-us-page {
+    .contact-us-form {
+      min-width: auto;
+      width: 100%;
+    }
+  }
+}
