--- a/src/assets/styles/scss/pages/not-found.scss
+++ b/src/assets/styles/scss/pages/not-found.scss
@@ -2,7 +2,6 @@
 @import '../utils/mixins.scss';
 
 main {
-
   .error_message {
     text-transform: uppercase;
     margin-top: 120px;
@@ -36,6 +35,31 @@ main {
       &:hover {
         opacity: 0.8;
       }
+    }
+  }
+}
+
+
+
+@media (max-width: 500px) {
+  main {
+    .error_message {
+      text-align: center;
+      margin-top: 70px;
+  
+      span {
+        font-size: 4em;
+      }
+  
+      p {
+        font-size: 1.5em;
+      }
+    }
+  
+    .link-block {
+      a {
+        font-size: 0.8em;
+        }
     }
   }
 }
