--- a/src/assets/styles/scss/particles/feedback.scss
+++ b/src/assets/styles/scss/particles/feedback.scss
@@ -37,3 +37,16 @@
     }
   } 
 }
+
+
+
+@media (max-width: 450px) {
+  .feedback-block {
+    margin-top: 40px;
+    gap: 10px;
+  
+    img {
+      max-width: 80px;
+    }
+  }
+}
