--- a/src/assets/styles/scss/pages/publications/components/publication.scss
+++ b/src/assets/styles/scss/pages/publications/components/publication.scss
@@ -13,6 +13,7 @@
 
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   gap: 6px;
 
   .description{
@@ -37,6 +38,7 @@
 
   .authors {
     display: flex;
+    flex-wrap: wrap;
     gap: 7px;
 
     .author { 
@@ -44,6 +46,37 @@
       border-radius: 3px;
       padding: 2px 6px;
       font-size: 0.9em;
+    }
+  }
+}
+
+
+
+@media (max-width: 800px) {
+  .publication {
+    .description{
+      font-size: 1.15em;
+    }
+  
+    .authors {  
+      .author { 
+        font-size: 0.8em;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 580px) {
+  .publication {
+    .description{
+      font-size: 1.1em;
+    }
+  
+    .authors {  
+      .author { 
+        font-size: 0.75em;
+      }
     }
   }
 }
