fix (app): changed adap styles

--- a/src/assets/styles/css/pages/blogs/blogs.css
+++ b/src/assets/styles/css/pages/blogs/blogs.css
@@ -11,7 +11,7 @@
 .blogs .blog {
   width: 400px;
   padding: 20px;
-  box-shadow: -3px -3px 7px rgba(228, 227, 227, 0.5019607843), 3px 3px 7px rgba(168, 174, 180, 0.4705882353);
+  box-shadow: -3px -3px 7px #e4e3e380, 3px 3px 7px #a8aeb478;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
@@ -24,7 +24,7 @@
   gap: 12px;
 }
 .blogs .blog:hover {
-  background-color: rgba(204, 204, 204, 0.2);
+  background-color: #cccccc33;
 }
 .blogs .blog img {
   height: auto;
@@ -53,6 +53,16 @@
   }
   .blogs .blog h4 {
     font-size: 1.1em;
+  }
+}
+
+@media (max-width: 750px) {
+  .blogs.preloader-blogs {
+    flex-direction: column;
+    align-items: center;
+  }
+  .blogs.preloader-blogs .preview-block {
+    width: 80% !important;
   }
 }
 
