--- a/src/assets/styles/css/pages/publications/components/publication.css
+++ b/src/assets/styles/css/pages/publications/components/publication.css
@@ -1,6 +1,6 @@
 .publication {
   margin-bottom: 20px;
-  border-bottom: 1px solid rgba(204, 204, 204, 0.6784313725);
+  border-bottom: 1px solid #ccccccad;
   padding-bottom: 25px;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@
   color: #0082C7;
 }
 .publication .description.non-active {
-  color: rgba(65, 63, 66, 0.8588235294);
+  color: #413f42db;
   cursor: default;
 }
 .publication .description .num {
