--- a/src/assets/styles/scss/pages/blogs/blogs.scss
+++ b/src/assets/styles/scss/pages/blogs/blogs.scss
@@ -15,3 +15,16 @@
 
   @import './components/blog-item.scss';
 }
+
+@media (max-width: 750px) {
+  .blogs {
+    &.preloader-blogs {
+      flex-direction: column;
+      align-items: center;
+
+      .preview-block {
+        width: 80% !important;
+      }
+    }
+  }
+}
