--- a/src/assets/styles/css/pages/contact-us.css
+++ b/src/assets/styles/css/pages/contact-us.css
@@ -14,11 +14,11 @@
 }
 .contact-us-page .contact-us-form {
   min-width: 420px;
-  border: 1px solid #cccccc59;
   border-radius: 4px;
   opacity: hidden;
   display: flex;
   flex-direction: column;
+  gap: 6px;
 }
 .contact-us-page .contact-us-form textarea {
   min-height: 150px;
@@ -28,10 +28,11 @@
   border: none;
   background: none;
   font-size: 1em;
+  background-color: #f2f4f6;
+  border-radius: 5px;
 }
 .contact-us-page .contact-us-form input {
   padding: 10px;
-  border-bottom: 1px solid #cccccc59;
   font-family: "Bold";
 }
 .contact-us-page .contact-us-form textarea {
@@ -39,11 +40,11 @@
   padding-top: 10px;
 }
 .contact-us-page .contact-us-form button {
-  border-top: 1px solid #cccccc59;
   padding: 10px 0;
   font-family: "Bold";
   color: #413f42a3;
   cursor: not-allowed;
+  transition: 0.4s;
 }
 .contact-us-page .contact-us-form button.active {
   color: #0082C7;
