--- a/src/assets/styles/css/particles/no-result.css
+++ b/src/assets/styles/css/particles/no-result.css
@@ -10,8 +10,8 @@
   border-radius: 3px;
   font-size: 0.9em;
   user-select: none;
-  border: 1px solid rgba(65, 63, 66, 0.3803921569);
-  color: rgba(65, 63, 66, 0.5803921569);
+  border: 1px solid #413f4261;
+  color: #413f4294;
 }
 
 /*# sourceMappingURL=no-result.css.map */
