--- a/src/assets/styles/css/particles/search.css
+++ b/src/assets/styles/css/particles/search.css
@@ -1,12 +1,12 @@
 .page-search {
-  border: 1px solid #ccc;
   border-radius: 5px;
   margin: 0 auto;
   max-width: 350px;
   min-height: 40px;
   overflow: hidden;
-  padding: 0 4px;
+  padding: 1px 4px;
   min-width: 360px;
+  background-color: #f2f4f6;
   display: flex;
   gap: 5px;
 }
@@ -18,9 +18,9 @@
   background-repeat: no-repeat;
   background-size: 19px;
   background-position: left;
-  font-family: "Bold";
   background-position-x: 6px;
-  font-size: 1em;
+  font-size: 15px;
+  background-color: inherit;
 }
 .page-search input::placeholder {
   color: #666666d6;
@@ -46,6 +46,7 @@
   font-size: 1em;
   font-family: "Bold";
   transition: 0.4s;
+  color: #444444b3;
 }
 .page-search button:hover {
   color: #0082C7;
