--- a/src/assets/styles/css/particles/header.css
+++ b/src/assets/styles/css/particles/header.css
@@ -1,13 +1,13 @@
 .main-header {
   width: calc(100% - 80px);
-  background-color: rgba(255, 255, 255, 0.9098039216);
-  border-bottom: 1px solid rgba(204, 204, 204, 0.3490196078);
+  background-color: #ffffffe8;
+  border-bottom: 1px solid #cccccc59;
   padding: 15px 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 }
 .main-header .cover {
   width: 100%;
@@ -33,7 +33,7 @@
   list-style-type: none;
 }
 .main-header .cover ul li a {
-  color: rgba(65, 63, 66, 0.8588235294);
+  color: #413f42db;
   user-select: none;
   text-transform: capitalize;
   font-family: "Bold";
@@ -102,7 +102,7 @@
     list-style-type: none;
   }
   .main-header .burger-menu ul li a {
-    color: rgba(65, 63, 66, 0.8588235294);
+    color: #413f42db;
     user-select: none;
     text-transform: capitalize;
     font-family: "Bold";
