--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,10 @@ button {
 ul li {
   list-style-type: none;
 }
+
+@media (max-width: 490px) {
+  .container {
+    width: calc(100% - 40px);
+    padding: 0 20px;
+  }
+}
