--- a/src/assets/styles/css/particles/footer.css
+++ b/src/assets/styles/css/particles/footer.css
@@ -1,7 +1,7 @@
 .main-footer {
   margin-top: 50px;
   padding: 30px 100px;
-  background: linear-gradient(to bottom right, #024f7e 40%, #0a6482db);
+  background: linear-gradient(to bottom right, rgb(2, 79, 126) 40%, rgba(10, 100, 130, 0.8588235294));
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -25,8 +25,8 @@
   gap: 15px;
 }
 .main-footer .cover .info h4 {
-  color: #ffffffe8;
-  font-size: 2em;
+  color: rgba(255, 255, 255, 0.9098039216);
+  font-size: 1.7em;
   text-transform: uppercase;
 }
 .main-footer .cover .info ul {
@@ -54,10 +54,11 @@
   max-width: 40px;
 }
 .main-footer .cover .info ul li a span {
+  font-size: 1.3em;
   transition: 0.4s;
 }
 .main-footer .cover .info ul li a span:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
 .main-footer .map {
   margin-top: 20px;
@@ -67,16 +68,16 @@
 }
 .main-footer hr {
   border: none;
-  margin: 30px 0;
+  margin: 20px 0;
   height: 1px;
   width: 100%;
   max-width: 1350px;
-  background-color: #ffffff56;
+  background-color: rgba(255, 255, 255, 0.337254902);
 }
 .main-footer .description {
   text-align: center;
-  font-size: 1em;
-  color: #ffffffe8;
+  font-size: 1.1em;
+  color: rgba(255, 255, 255, 0.9098039216);
 }
 .main-footer .description .line {
   color: #fff;
@@ -87,7 +88,7 @@
     justify-content: center;
   }
   .main-footer .cover .info h4 {
-    font-size: 1.7em;
+    font-size: 1.5em;
     text-align: center;
   }
   .main-footer .cover .info ul {
@@ -97,6 +98,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    gap: 15px;
   }
   .main-footer .cover .info ul li a {
     gap: 7px;
@@ -104,7 +106,12 @@
   .main-footer .cover .info ul li a img {
     max-width: 30px;
   }
-
+  .main-footer .cover .info ul li a span {
+    font-size: 1.1em;
+  }
+  .main-footer .description {
+    font-size: 0.9em;
+  }
   .description {
     text-align: center;
   }
@@ -114,7 +121,7 @@
     padding: 10px 40px;
   }
   .main-footer .cover .info h4 {
-    font-size: 1.5em;
+    font-size: 1.3em;
   }
   .main-footer .cover .info ul li a {
     text-align: center;
@@ -122,8 +129,10 @@
   .main-footer .cover .info ul li a img {
     display: none;
   }
-
-  .description {
+  .main-footer .cover .info ul li a span {
+    font-size: 1em;
+  }
+  .main-footer .description {
     font-size: 0.8em;
   }
 }
