--- a/src/assets/styles/scss/particles/footer.scss
+++ b/src/assets/styles/scss/particles/footer.scss
@@ -23,7 +23,7 @@
   
       h4 {
         color: #ffffffe8;
-        font-size: 2em;
+        font-size: 1.7em;
         text-transform: uppercase;
       }
   
@@ -51,10 +51,11 @@
             }
   
             span {
+              font-size: 1.3em;
               transition: 0.4s;
 
               &:hover {
-                opacity: 0.7;
+                opacity: 0.6;
               }
             }
           }
@@ -73,7 +74,7 @@
 
   hr {
     border: none;
-    margin: 30px 0;
+    margin: 20px 0;
     height: 1px;
     width: 100%;
     max-width: $maxWidth;
@@ -82,7 +83,7 @@
 
   .description {
     text-align: center;
-    font-size: 1em;
+    font-size: 1.1em;
     color: #ffffffe8;
 
     .line {
@@ -99,13 +100,14 @@
 
       .info {
         h4 {
-          font-size: 1.7em;
+          font-size: 1.5em;
           text-align: center;
         }
 
         ul {
           @include flex-column;
           align-items: center;
+          gap: 15px;
 
           li {
             a {
@@ -114,10 +116,18 @@
               img {
                 max-width: 30px;
               }
+
+              span {
+                font-size: 1.1em;
+              }
             }
           }
         }
       }
+    }
+
+    .description {
+      font-size: 0.9em;
     }
   }
 
@@ -133,7 +143,7 @@
     .cover {
       .info {
         h4 {
-          font-size: 1.5em;
+          font-size: 1.3em;
         }
 
         ul {
@@ -144,13 +154,17 @@
               img {
                 display: none;
               }
+
+              span {
+                font-size: 1em;
+              }
             }
           }
         }
       }
     }
-  }
-  .description {
-    font-size: 0.8em;
+    .description {
+      font-size: 0.8em;
+    }
   }
 }
